tests/data/placebo/test_security_group_cidr_ingress_list/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "test-delete-me-2",
                "GroupName": "test-delete-me-2",
                "IpPermissions": [
                    {
                        "FromPort": 0,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "172.0.0.0/32"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 0,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-01a5844447c79ac7b",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-48c22c21"
            },
            {
                "Description": "test-delete-me-1",
                "GroupName": "test-delete-me-1",
                "IpPermissions": [
                    {
                        "FromPort": 0,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.0.0/32"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 0,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-0803561527fe68575",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-48c22c21"
            },
            {
                "Description": "default VPC security group",
                "GroupName": "default",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-b516e3dc",
                                "UserId": "644160558196"
                            }
                        ]
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-b516e3dc",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-48c22c21"
            }
        ],
        "ResponseMetadata": {}
    }
}
